--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -291,6 +291,12 @@
      <Reference Include="Newtonsoft.Json">
      <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/PackageCache/com.unity.nuget.newtonsoft-json@2.0.0/Runtime/Newtonsoft.Json.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.Burst.Unsafe">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/PackageCache/com.unity.burst@1.4.1/Unity.Burst.Unsafe.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Collections.LowLevel.ILSupport">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/PackageCache/com.unity.collections@0.15.0-preview.21/Unity.Collections.LowLevel.ILSupport/Unity.Collections.LowLevel.ILSupport.dll</HintPath>
+     </Reference>
      <Reference Include="mscorlib">
      <HintPath>C:/Program Files/Unity/Hub/Editor/2020.3.24f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
      </Reference>
@@ -713,6 +719,81 @@
      </Reference>
      <Reference Include="Unity.RenderPipelines.Core.Editor">
      <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.RenderPipelines.Core.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Properties.UI.Editor">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Properties.UI.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Scenes">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Scenes.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Mathematics.Extensions.Hybrid">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Mathematics.Extensions.Hybrid.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Entities.BuildUtils">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Entities.BuildUtils.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Properties.UI">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Properties.UI.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.ScriptableBuildPipeline">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.ScriptableBuildPipeline.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Serialization">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Serialization.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Jobs">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Jobs.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Deformations">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Deformations.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Properties">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Properties.dll</HintPath>
+     </Reference>
+     <Reference Include="UnityEditor.CacheServer">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/UnityEditor.CacheServer.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Jobs.Editor">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Jobs.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Scenes.Editor">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Scenes.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Collections">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Collections.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Entities.Hybrid.EndToEnd.Tests">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Entities.Hybrid.EndToEnd.Tests.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Entities.Editor">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Entities.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Entities.Hybrid">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Entities.Hybrid.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Transforms.Hybrid">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Transforms.Hybrid.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Burst">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Burst.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Mathematics.Extensions">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Mathematics.Extensions.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Transforms">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Transforms.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Entities">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Entities.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Serialization.Editor">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Serialization.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.Burst.Editor">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.Burst.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Unity.ScriptableBuildPipeline.Editor">
+     <HintPath>D:/AnotherShooterBitesTheDust/AnotherShooterBitesTheDust/Library/ScriptAssemblies/Unity.ScriptableBuildPipeline.Editor.dll</HintPath>
      </Reference>
   </ItemGroup>
   <ItemGroup>
